--- a/todo_list/src/app/pages/authentication/login/login.component.html
+++ b/todo_list/src/app/pages/authentication/login/login.component.html
@@ -1,12 +1,20 @@
 <div class="flex justify-center items-center w-screen h-screen">
-  <div class="flex flex-col justify-center items-center w-80 h-96 gap-2">
-    <p class="text-primary font-semibold text-2xl">Welcome back</p>
-    <p class="text-sm">Enter your email to sign in to your account</p>
+  <div class="flex flex-col justify-center items-center w-80 h-96 gap-5">
+    <div class="grid text-center gap-2 justify-items-center">
+      <img src="assets/logo/logo.svg" class="w-14" alt="logo">
+      <p class="text-primary font-semibold text-2xl">Welcome back</p>
+      <p class="text-sm">Enter your email to sign in to your account</p>
+    </div>
     <div class="grid w-full gap-2">
       <input class="w-full" hlmInput placeholder='name@example.com' type='email' autocomplete="true"/>
       <input class="w-full" hlmInput placeholder='********' type='password' />
     </div>
     <button hlmBtn class="w-full font-semibold">Sign In with Email</button>
+    <div class="flex w-full items-center justify-between">
+      <hr class="w-1/4">
+      <p class="text-xs">OR CONTINUE WITH</p>
+      <hr class="w-1/4">
+    </div>
     <button hlmBtn class="flex justify-center items-center w-full font-semibold gap-2" variant="outline">
       <img src="assets/logo/google.svg" class="w-4" alt="google logo">
       <p>Google</p>
