--- a/todo_list/src/app/pages/home/home.component.html
+++ b/todo_list/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="px-9 py-8">
+<div class="px-9 py-8 grid gap-10">
   <div class="flex justify-between items-center">
     <div class="relative">
       <input
@@ -11,20 +11,29 @@
         name="lucideSearch"
       />
     </div>
-    <div class="flex gap-5 items-center">
+    <div class="flex gap-2 items-center">
       <p class="text-sm font-light">Group by</p>
-      <brn-select class="inline-block" placeholder="Aucun">
-        <hlm-select-trigger>
+      <brn-select class="inline-block">
+        <hlm-select-trigger class="w-32">
           <hlm-select-value />
         </hlm-select-trigger>
         <hlm-select-content class="w-56">
-          <hlm-option value="Aucun">Aucun</hlm-option>
           <hlm-option value="Travail">Travail</hlm-option>
           <hlm-option value="Personnel">Personnel</hlm-option>
           <hlm-option value="Etudes">Études</hlm-option>
         </hlm-select-content>
       </brn-select>
-
+      <hlm-icon
+        name="lucideTornado"
+      />
+    </div>
+  </div>
+  <div class="flex gap-2">
+    <div class="px-3 py-4 text-xs w-72 rounded-sm bg-popover">
+      <p class="font-semibold">A FAIRE 1</p>
+    </div>
+    <div class="px-3 py-4 text-xs bg-popover w-72 rounded-sm">
+      <p class="font-semibold">FINI 1</p>
     </div>
   </div>
 </div>
