--- a/todo_list/src/app/shared/components/logo/logo.component.html
+++ b/todo_list/src/app/shared/components/logo/logo.component.html
@@ -1,1 +1,4 @@
-<a href="/home"><img src="assets/logo/logo.svg" class="w-7" alt="logo"></a>
+<div class="flex gap-2 items-center">
+  <a href="/home"><img src="assets/logo/logo.svg" class="w-7" alt="logo"></a>
+  <p class="font-bold">Londo Todo List</p>
+</div>
