--- a/todo_list/src/app/pages/authentication/register/register.component.html
+++ b/todo_list/src/app/pages/authentication/register/register.component.html
@@ -1,6 +1,7 @@
 <div class="flex justify-between items-center w-screen h-screen">
-  <div class="flex items-center justify-center w-1/2 h-full border bg-secondary">
-    <img src="assets/logo/logo_preview.svg" class="w-96" alt="logo_preview">
+  <div class="flex flex-col items-center justify-center w-1/2 h-full border bg-secondary gap-2">
+    <img src="assets/logo/logo.svg" class="w-32" alt="logo">
+    <p class="font-extrabold text-white text-4xl">Londo Todo List</p>
   </div>
   <div class="flex justify-center items-center w-1/2 h-full">
     <div class="flex flex-col justify-center items-center w-80 h-96 gap-5">
