add task backend feat

--- a/todo_list/src/app/shared/components/top-bar/top-bar.component.html
+++ b/todo_list/src/app/shared/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between border h-14 px-5 fixed w-full">
+<div class="flex items-center justify-between border h-14 px-5 fixed w-full bg-white z-10">
   <app-logo />
   <div class="flex items-center gap-5">
     <hlm-icon size="base" name="lucideSiren" class="text-red-500"/>
