--- a/todo_list/src/app/pages/home/home.component.html
+++ b/todo_list/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="px-9 py-8 grid gap-10">
-  <div class="flex justify-between items-center">
+  <div class="flex flex-col gap-2 md:flex-row justify-between items-start md:items-center">
     <div class="relative">
       <input
         hlmInput
@@ -31,7 +31,7 @@
       />
     </div>
   </div>
-  <div class="flex flex-col lg:flex-row gap-2" cdkDropListGroup>
+  <div class="flex flex-col items-center md:flex-row gap-2 w-full" cdkDropListGroup>
     <app-task-list title="TODO" [tasks]="todo" state="TODO"/>
     <app-task-list title="DONE" [tasks]="done" state="DONE"/>
   </div>
