add auth service

--- a/todo_list/src/app/pages/authentication/login/login.component.html
+++ b/todo_list/src/app/pages/authentication/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center w-screen h-screen">
+<form [formGroup]="loginForm" class="flex justify-center items-center w-screen h-screen">
   <div class="flex flex-col justify-center items-center w-80 h-96 gap-5">
     <div class="grid text-center gap-2 justify-items-center">
       <img src="assets/logo/logo.svg" class="w-14" alt="logo">
@@ -6,10 +6,10 @@
       <p class="text-sm">Enter your email to sign in to your account</p>
     </div>
     <div class="grid w-full gap-2">
-      <input class="w-full" hlmInput placeholder='name@example.com' type='email' autocomplete="true"/>
-      <input class="w-full" hlmInput placeholder='********' type='password' />
+      <input class="w-full" formControlName="email" hlmInput placeholder='name@example.com' type='email' autocomplete="true"/>
+      <input class="w-full" formControlName="password" hlmInput placeholder='********' type='password' />
     </div>
-    <button hlmBtn class="w-full font-semibold" [disabled]="loading()">
+    <button (click)="onSubmit()" hlmBtn class="w-full font-semibold" [disabled]="loading() || loginForm.invalid">
       @if (loading()){
         <hlm-spinner class="w-5 h-5"/>
       } @else {
@@ -21,10 +21,10 @@
       <p class="text-xs">OR CONTINUE WITH</p>
       <hr class="w-1/4">
     </div>
-    <button hlmBtn class="flex justify-center items-center w-full font-semibold gap-2" variant="outline">
+    <button disabled hlmBtn class="flex justify-center items-center w-full font-semibold gap-2" variant="outline">
       <img src="assets/logo/google.svg" class="w-4" alt="google logo">
       <p>Google</p>
     </button>
     <a  href="/register" class="underline text-sm">Don't have an account? Sign Up</a>
   </div>
-</div>
+</form>
