--- a/todo_list/src/app/pages/home/home.component.html
+++ b/todo_list/src/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
-<div class="px-9 py-8 grid gap-10">
+<div class="px-9 py-8 grid gap-5">
   <div class="flex flex-col gap-2 md:flex-row justify-between items-start md:items-center">
     <div class="relative">
       <input
         hlmInput
         placeholder='Search'
         class="px-9 border-secondary"
+        (input)="search($event)"
       />
       <hlm-icon
         class="absolute inset-0 left-3 top-3 w-[1.1rem] text-secondary"
@@ -26,13 +27,13 @@
           </hlm-select-content>
         </brn-select>
       </form>
-      <hlm-icon
-        name="lucideTornado"
-      />
+<!--      <hlm-icon-->
+<!--        name="lucideTornado"-->
+<!--      />-->
     </div>
   </div>
   <div class="flex flex-col items-center md:flex-row gap-2 w-full" cdkDropListGroup>
-    <app-task-list title="TODO" [tasks]="todo" state="TODO"/>
-    <app-task-list title="DONE" [tasks]="done" state="DONE"/>
+    <app-task-list title="TODO" [tasks]="filteredTodoTasks" state="TODO"/>
+    <app-task-list title="DONE" [tasks]="filteredDoneTasks" state="DONE"/>
   </div>
 </div>
