--- a/todo_list/src/app/shared/components/task-card/task-card.component.html
+++ b/todo_list/src/app/shared/components/task-card/task-card.component.html
@@ -1,9 +1,64 @@
-<div class="w-full h-20 rounded-md border-secondary border bg-white p-3 cursor-pointer overflow-hidden" cdkDrag>
-  <p class="text-sm font-medium" [ngClass]="{'line-through':state === 'DONE'}">{{ task.name }}</p>
-  <div class="flex justify-between items-center mt-5">
-    <div hlmBadge variant="outline">{{ task.category }}</div>
-    @if (state === 'DONE'){
-      <hlm-icon name="lucideCheck" size="sm" class="text-green-800"/>
-    }
+<div class="relative">
+  <button [disabled]="cardLoading()" class="text-start w-full h-20 rounded-md border-secondary border bg-white p-3 cursor-pointer overflow-hidden" [cdkDragData]="task" cdkDrag (cdkDragDropped)="drop($event)">
+    <p class="text-sm font-medium" [ngClass]="{'line-through':state === 'DONE'}">{{ task.name }}</p>
+    <div class="flex justify-between items-center mt-5">
+      <div hlmBadge variant="outline">{{ task.category.name }}</div>
+      @if (state === 'DONE'){
+        <hlm-icon name="lucideCheck" size="sm" class="text-green-800"/>
+      }
+    </div>
+  </button>
+  <div class="absolute right-3 top-[0.90rem]">
+    <button (click)="openPopup()" class="z-10 justify-self-end text-black hover:bg-popover rounded-md">
+      <svg
+        class="lucide lucide-ellipsis"
+        fill="none"
+        height="20"
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        viewBox="0 0 24 24"
+        width="20"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <circle cx="12" cy="12" r="1" />
+        <circle cx="19" cy="12" r="1" />
+        <circle cx="5" cy="12" r="1" />
+      </svg>
+    </button>
   </div>
+<!--  @if (task.user !== undefined) {-->
+<!--    <div class="flex items-center justify-center absolute right-8 bottom-[0.5rem] bg-primary text-xs">-->
+<!--      <p>{{task.user?.email}}</p>-->
+<!--    </div>-->
+<!--  }-->
+  @if (isPopup()) {
+    <div
+      class="absolute right-1 top-10 z-10 flex flex-col rounded-lg border bg-white p-1 shadow gap-1"
+    >
+      <hlm-sheet side="right">
+        <button
+          brnSheetTrigger
+          [disabled]="loading()"
+          class="h-10 rounded-md p-2 text-start text-sm text-black hover:bg-popover w-full"
+          hlmBtn
+          variant="ghost"
+        >
+          Edit
+        </button>
+        <app-todo-sheet [task]="task"/>
+      </hlm-sheet>
+      <button
+        (click)="deleteTask()"
+        [disabled]="loading()"
+        hlmBtn
+        class="h-10 rounded-md p-2 text-start text-sm text-black hover:bg-popover"
+        variant="ghost"
+      >
+        Delete
+      </button>
+      <!--      <button class="text-black text-sm rounded-md w-48 hover:bg-hover h-10 text-start p-2">Delete</button>-->
+    </div>
+  }
 </div>
