add user Data to TopBar

--- a/todo_list/src/app/shared/components/top-bar/top-bar.component.html
+++ b/todo_list/src/app/shared/components/top-bar/top-bar.component.html
@@ -3,6 +3,6 @@
   <div class="flex items-center gap-5">
 <!--    <hlm-icon size="base" name="lucideSiren" class="text-red-500"/>-->
 <!--    <hlm-icon size="base" name="lucideSettings" />-->
-    <div class="flex items-center justify-center w-7 h-7 bg-primary rounded-full text-white"><p>E</p></div>
+    <div class="flex items-center justify-center w-7 h-7 bg-primary rounded-full text-white"><p>{{user.email.substring(0, 1).toUpperCase()}}</p></div>
   </div>
 </div>
