--- a/todo_list/src/app/shared/components/task-card/task-card.component.html
+++ b/todo_list/src/app/shared/components/task-card/task-card.component.html
@@ -1,5 +1,5 @@
 <div class="relative">
-  <button [disabled]="cardLoading()" class="text-start w-full h-20 rounded-md border-secondary border bg-white p-3 cursor-pointer overflow-hidden" [cdkDragData]="task" cdkDrag (cdkDragDropped)="drop($event)">
+  <button class="text-start w-full h-20 rounded-md border-secondary border bg-white p-3 cursor-pointer overflow-hidden" [cdkDragData]="task" cdkDrag (cdkDragDropped)="drop($event)">
     <p class="text-sm font-medium" [ngClass]="{'line-through':state === 'DONE'}">{{ task.name }}</p>
     <div class="flex justify-between items-center mt-5">
       <div hlmBadge variant="outline">{{ task.category.name }}</div>
