--- a/todo_list/src/app/pages/home/home.component.html
+++ b/todo_list/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<p-toast/>
 <div class="px-2 sm:px-9 py-8 grid gap-5">
   <div class="flex flex-col gap-2 md:flex-row justify-between items-start md:items-center">
     <div class="relative">
