--- a/todo_list/src/app/pages/authentication/login/login.component.html
+++ b/todo_list/src/app/pages/authentication/login/login.component.html
@@ -1,3 +1,4 @@
+<p-toast/>
 <form [formGroup]="loginForm" class="flex justify-center items-center w-screen h-screen">
   <div class="flex flex-col justify-center items-center w-80 h-96 gap-5">
     <div class="grid text-center gap-2 justify-items-center">
