--- a/todo_list/src/app/pages/authentication/register/register.component.html
+++ b/todo_list/src/app/pages/authentication/register/register.component.html
@@ -1,3 +1,4 @@
+<p-toast/>
 <form [formGroup]="registerForm" class="flex justify-between items-center w-screen h-screen">
   <div class="flex flex-col items-center justify-center w-1/2 h-full border bg-secondary gap-2">
     <img src="assets/logo/logo.svg" class="w-32" alt="logo">
@@ -7,7 +8,7 @@
     <div class="flex flex-col justify-center items-center w-80 h-96 gap-5">
       <div class="grid text-center gap-2 justify-items-center">
         <div class="absolute top-10 right-10">
-          <a href="/login"><button hlmBtn class="font-semibold" variant="ghost">Login</button></a>
+          <button hlmBtn class="font-semibold" variant="ghost"><a href="/login">Login</a></button>
         </div>
         <img src="assets/logo/logo.svg" class="w-14" alt="logo">
         <p class="text-primary font-semibold text-2xl">Create an account</p>
@@ -21,7 +22,7 @@
         @if (loading()){
           <hlm-spinner class="w-5 h-5"/>
         } @else {
-          <p>Sign In with Email</p>
+          <p>Sign Up with Email</p>
         }
       </button>
       <div class="flex w-full items-center justify-between">
