fix: register responsivity

--- a/todo_list/src/app/pages/authentication/register/register.component.html
+++ b/todo_list/src/app/pages/authentication/register/register.component.html
@@ -1,6 +1,6 @@
 <p-toast/>
-<form [formGroup]="registerForm" class="flex justify-between items-center w-screen h-screen">
-  <div class="flex flex-col items-center justify-center w-1/2 h-full border bg-secondary gap-2">
+<form [formGroup]="registerForm" class="flex justify-center md:justify-between items-center w-screen h-screen">
+  <div class="hidden md:flex flex-col items-center justify-center w-1/2 h-full border bg-secondary gap-2">
     <img src="assets/logo/logo.svg" class="w-32" alt="logo">
     <p class="font-extrabold text-white text-4xl">Londo Todo List</p>
   </div>
