fix: register responsivity #2

--- a/todo_list/src/app/pages/authentication/register/register.component.html
+++ b/todo_list/src/app/pages/authentication/register/register.component.html
@@ -4,7 +4,7 @@
     <img src="assets/logo/logo.svg" class="w-32" alt="logo">
     <p class="font-extrabold text-white text-4xl">Londo Todo List</p>
   </div>
-  <div class="flex justify-center items-center w-1/2 h-full">
+  <div class="flex justify-center items-center w-full md:w-1/2 h-full">
     <div class="flex flex-col justify-center items-center w-80 h-96 gap-5">
       <div class="grid text-center gap-2 justify-items-center">
         <div class="absolute top-10 right-10">
